--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -128,11 +128,11 @@
                     <dt class="text-sm font-medium text-gray-500">
                         Professionalism
                     </dt>
-                    {% if avg_rating.avg_professionalism >= 4 and avg_rating.avg_professionalism <= 5 %}
+                    {% if avg_rating.avg_professionalism >= 8 and avg_rating.avg_professionalism <= 10 %}
                     <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_professionalism| floatformat:2  }}</strong>
                     </dd>
-                    {% elif avg_rating.avg_professionalism > 3 and avg_rating.avg_professionalism < 4 %}
+                    {% elif avg_rating.avg_professionalism >= 5 and avg_rating.avg_professionalism < 8 %}
                     <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_professionalism| floatformat:2 }}</strong>
                     </dd>
@@ -146,11 +146,11 @@
                     <dt class="text-sm font-medium text-gray-500">
                         Teamwork
                     </dt>
-                    {% if avg_rating.avg_teamwork >= 4 and avg_rating.avg_teamwork <= 5 %}
+                    {% if avg_rating.avg_teamwork >= 8 and avg_rating.avg_teamwork <= 10 %}
                     <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_teamwork| floatformat:2 }}</strong>
                     </dd>
-                    {% elif avg_rating.avg_teamwork > 3 and avg_rating.avg_teamwork < 4 %}
+                    {% elif avg_rating.avg_teamwork >= 5 and avg_rating.avg_teamwork < 8 %}
                     <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_teamwork| floatformat:2 }}</strong>
                     </dd>
@@ -164,11 +164,11 @@
                     <dt class="text-sm font-medium text-gray-500">
                         Communication
                     </dt>
-                    {% if avg_rating.avg_communication >= 4 and  avg_rating.avg_communication <= 5%}
+                    {% if avg_rating.avg_communication >= 8 and  avg_rating.avg_communication <= 10 %}
                     <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_communication| floatformat:2 }}</strong>
                     </dd>
-                    {% elif avg_rating.avg_communication > 3 and avg_rating.avg_communication < 4 %}
+                    {% elif avg_rating.avg_communication >= 5 and avg_rating.avg_communication < 8 %}
                     <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_communication| floatformat:2 }}</strong>
                     </dd>
@@ -182,11 +182,11 @@
                     <dt class="text-sm font-medium text-gray-500">
                         Organize
                     </dt>
-                    {% if avg_rating.avg_organize >= 4 and avg_rating.avg_organize <= 5 %}
+                    {% if avg_rating.avg_organize >= 8 and avg_rating.avg_organize <= 10 %}
                     <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_organize| floatformat:2 }}</strong>
                     </dd>
-                    {% elif avg_rating.avg_organize > 3 and avg_rating.avg_organize < 4 %}
+                    {% elif avg_rating.avg_organize >= 5 and avg_rating.avg_organize < 8 %}
                     <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_organize| floatformat:2 }}</strong>
                     </dd>
@@ -200,11 +200,11 @@
                     <dt class="text-sm font-medium text-gray-500">
                         Problem solving
                     </dt>
-                    {% if avg_rating.avg_problem_solving >= 4 and avg_rating.avg_problem_solving <= 5 %}
+                    {% if avg_rating.avg_problem_solving >= 8 and avg_rating.avg_problem_solving <= 10 %}
                     <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_problem_solving| floatformat:2 }}</strong>
                     </dd>
-                    {% elif avg_rating.avg_problem_solving > 3 and avg_rating.avg_problem_solving < 4 %}
+                    {% elif avg_rating.avg_problem_solving >= 5 and avg_rating.avg_problem_solving < 8 %}
                     <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_problem_solving| floatformat:2 }}</strong>
                     </dd>
@@ -218,11 +218,11 @@
                     <dt class="text-sm font-medium text-gray-500">
                         Personality
                     </dt>
-                    {% if avg_rating.avg_personality >= 4 and avg_rating.avg_personality <= 5 %}
+                    {% if avg_rating.avg_personality >= 8 and avg_rating.avg_personality <= 10 %}
                     <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_personality| floatformat:2 }}</strong>
                     </dd>
-                    {% elif avg_rating.avg_personality > 3 and avg_rating.avg_personality < 4 %}
+                    {% elif avg_rating.avg_personality >= 5 and avg_rating.avg_personality < 8 %}
                     <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_personality| floatformat:2 }}</strong>
                     </dd>
@@ -236,17 +236,71 @@
                     <dt class="text-sm font-medium text-gray-500">
                         Reliability
                     </dt>
-                    {% if avg_rating.avg_reliability >= 4 and avg_rating.avg_reliability <= 5 %}
+                    {% if avg_rating.avg_reliability >= 8 and avg_rating.avg_reliability <= 10 %}
                     <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_reliability| floatformat:2 }}</strong>
                     </dd>
-                    {% elif avg_rating.avg_reliability > 3 and avg_rating.avg_reliability < 4 %}
+                    {% elif avg_rating.avg_reliability >= 5 and avg_rating.avg_reliability < 8 %}
                     <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_reliability| floatformat:2 }}</strong>
                     </dd>
                     {% else %}
                     <dd class="mt-1 text-sm text-red-600 sm:mt-0 sm:col-span-2">
                         <strong>{{ avg_rating.avg_reliability| floatformat:2 }}</strong>
+                    </dd>
+                    {% endif %}
+                </div>
+                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-gray-500">
+                        Honesty and integrity
+                    </dt>
+                    {% if avg_rating.avg_honesty_integrity >= 8 and avg_rating.avg_honesty_integrity <= 10 %}
+                    <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_honesty_integrity| floatformat:2 }}</strong>
+                    </dd>
+                    {% elif avg_rating.avg_honesty_integrity >= 5 and avg_rating.avg_honesty_integrity < 8 %}
+                    <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_honesty_integrity| floatformat:2 }}</strong>
+                    </dd>
+                    {% else %}
+                    <dd class="mt-1 text-sm text-red-600 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_honesty_integrity| floatformat:2 }}</strong>
+                    </dd>
+                    {% endif %}
+                </div>
+                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-gray-500">
+                        Emotional intelligence
+                    </dt>
+                    {% if avg_rating.avg_emotional_intelligence >= 8 and avg_rating.avg_emotional_intelligence <= 10 %}
+                    <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_emotional_intelligence| floatformat:2 }}</strong>
+                    </dd>
+                    {% elif avg_rating.avg_emotional_intelligence >= 5 and avg_rating.avg_emotional_intelligence < 8 %}
+                    <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_emotional_intelligence| floatformat:2 }}</strong>
+                    </dd>
+                    {% else %}
+                    <dd class="mt-1 text-sm text-red-600 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_emotional_intelligence| floatformat:2 }}</strong>
+                    </dd>
+                    {% endif %}
+                </div>
+                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-gray-500">
+                        Willingness to learn
+                    </dt>
+                    {% if avg_rating.avg_willingness_to_learn >= 8 and avg_rating.avg_willingness_to_learn <= 10 %}
+                    <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_willingness_to_learn| floatformat:2 }}</strong>
+                    </dd>
+                    {% elif avg_rating.avg_willingness_to_learn >= 5 and avg_rating.avg_willingness_to_learn < 8 %}
+                    <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_willingness_to_learn| floatformat:2 }}</strong>
+                    </dd>
+                    {% else %}
+                    <dd class="mt-1 text-sm text-red-600 sm:mt-0 sm:col-span-2">
+                        <strong>{{ avg_rating.avg_willingness_to_learn| floatformat:2 }}</strong>
                     </dd>
                     {% endif %}
                 </div>
