--- a/templates/users/list_of_users_by_office.html
+++ b/templates/users/list_of_users_by_office.html
@@ -131,6 +131,13 @@
                                             class="text-indigo-600 hover:text-indigo-900">Rate</a>
                                     </td>
                                     {% endif %}
+                                    
+                                   {% if request.user.is_staff %}
+                                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                                        <a href="{% url 'users:user_details' pk=user.pk %}"
+                                            class="text-indigo-600 hover:text-indigo-900">View profile</a>
+                                    </td>
+                                    {% endif %}
                                 </tr>
                                 <!-- More people... -->
                             </tbody>
