--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -100,13 +100,12 @@
                         <dt class="text-sm font-medium text-gray-500">
                             Overall rating
                         </dt>
-
                         {% if overall_rating.overall_avg > 80 %}
                         <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                             <strong>{{ overall_rating.overall_avg|floatformat:2 }}</strong>
                         </dd>
                         {% elif overall_rating.overall_avg <= 80 and overall_rating.overall_avg >= 50 %}
-                        <dd class="mt-1 text-sm text-yellow-600 sm:mt-0 sm:col-span-2">
+                        <dd class="mt-1 text-sm text-yellow-400 sm:mt-0 sm:col-span-2">
                             <strong>{{ overall_rating.overall_avg|floatformat:2 }}</strong>
                         </dd>
                         {% else %}
@@ -114,7 +113,6 @@
                             <strong>{{ overall_rating.overall_avg|floatformat:2 }}</strong>
                         </dd>
                         {% endif %}
-
                     </div>
                     <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
                         <dt class="text-sm font-medium text-gray-500">
@@ -337,12 +335,16 @@
                         {{ review.text }}
                     </dd>
                 </div>
-            </dl>
-            {% comment %} <a href="{% url 'users:edit_user_txt_review' pk=user.pk %}">
+                <a href="{% url 'users:edit_comment' pk=review.pk %}">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                 </svg>
-            </a> {% endcomment %}
+                </a>
+                {% comment %} <a href="{% url 'users:delete_comment' pk=review.pk %}">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" />
+                </svg>
+                </a> {% endcomment %}
             {% endfor %}
         </div>
 
