--- a/templates/search.html
+++ b/templates/search.html
@@ -129,7 +129,7 @@
 
                             {% if request.user.is_staff %}
                             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                <a href="{% url 'users:user_details' pk=user.pk %}"
+                                <a href="{% url 'users:user_details' pk=search.pk %}"
                                     class="text-indigo-600 hover:text-indigo-900">View profile</a>
                             </td>
                             {% endif %}
