--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,22 +1,26 @@
 #login {
-    margin-bottom: 270px;
+  margin-bottom: 270px;
 }
 
 #register {
-    margin-top: 50px;
-    margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 #logged-in {
-    padding-bottom: 320px;
-    padding-top: 200px;
+  padding-bottom: 320px;
+  padding-top: 200px;
 }
 
 #span {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .search {
-    margin-right: 20px;
+  margin-right: 5px;
+}
 
+.edit_button {
+  position: absolute;
+  right: 40px;
 }
