--- a/templates/ratings/edit_comment.html
+++ b/templates/ratings/edit_comment.html
@@ -31,24 +31,21 @@
                         src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
                         alt="">
                     <h3 class="text-lg leading-6 font-medium text-gray-900">
-                        Edit text comment
+                        Edit <strong>{{ post.reviewed_by.first_name }} {{ post.reviewed_by.last_name }}</strong> text comment
                     </h3>
-                    <p class="mt-1 max-w-2xl text-sm text-gray-500">
-                        Text comment
-                    </p>
                 </div>
                 <div class="border-t border-gray-200">
                     <dl>
-                        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">
-                                Text
-                            </dt>
+                        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-2 sm:gap-4 sm:px-6">
                             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                                 {{ form.text}}
                             </dd>
                         </div>
                         <div class="flex flex-wrap -mx-3 mb-6">
                             <div class="w-full flex justify-center">
+                                <button type="cancel" value="Cancel" class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
+                                    <a class="btn btn-default" href="{% url 'users:user_details' pk=post.reviewed_user.pk %}">Cancel</a>
+                                </button>
                                 <button type="submit" value="Submit"
                                     class="shadow-none bg-blue-700 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
                                     Submit
