added post model, fixed some html

--- a/templates/dashboard_nav.html
+++ b/templates/dashboard_nav.html
@@ -1,5 +1,5 @@
     <aside class="hidden sm:flex sm:flex-col">
-        <a href="#"
+        <a href="{% url 'home' %}"
             class="inline-flex items-center justify-center h-20 w-20 bg-purple-600 hover:bg-purple-500 focus:bg-purple-500">
             <svg fill="none" viewBox="0 0 64 64" class="h-12 w-12">
                 <title>Company logo</title>
