--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -16,12 +16,18 @@
   margin-left: 10px;
 }
 
+@media only screen and (max-width: 600px) {
+  .adminbox {
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+}
 .search {
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .admin {
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .edit_button {
