--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -128,24 +128,27 @@
             </section>
             <section class="grid md:grid-cols-2 xl:grid-cols-4 xl:grid-rows-3 xl:grid-flow-col gap-6">
                 <div class="flex flex-col md:col-span-2 md:row-span-2 bg-white shadow rounded-lg">
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Top attributes</div>
+                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Message of the day</div>
+                    {% for post in posts  %}
+                    
+                        <p>{{ post.title }}</p>
+                        <p>{{ post.body }}</p>
+                        <p>{{ post.date_posted }}</p>
+                    
+                    {% endfor %}
 
 
                 </div>
                 <div class="flex items-center p-8 bg-white shadow rounded-lg">
                     <div
-                        class="inline-flex flex-shrink-0 items-center justify-center h-16 w-16 text-yellow-600 bg-yellow-100 rounded-full mr-6">
-                        <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-                            <path fill="#fff" d="M12 14l9-5-9-5-9 5 9 5z" />
-                            <path fill="#fff"
-                                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222" />
+                        class="inline-flex flex-shrink-0 items-center justify-center h-16 w-16 text-blue-600 bg-blue-100 rounded-full mr-6">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
                         </svg>
                     </div>
                     <div>
-                        <span class="block text-2xl font-bold">25</span>
-                        <span class="block text-gray-500">Lections left</span>
+                        <span id="time" class="block text-2xl font-bold"></span>
+                        <span class="block text-gray-500">Current date</span>
                     </div>
                 </div>
                 <div class="flex items-center p-8 bg-white shadow rounded-lg">
@@ -157,8 +160,8 @@
                         </svg>
                     </div>
                     <div>
-                        <span class="block text-2xl font-bold">139</span>
-                        <span class="block text-gray-500">Hours spent on lections</span>
+                        <span class="block text-2xl font-bold">{{ user.date_calculate }}</span>
+                        <span class="block text-gray-500">Days spent on system</span>
                     </div>
                 </div>
                 {% comment %} OVERAL RATING BY SUM OF ALL CRITERIAS {% endcomment %}
@@ -204,42 +207,48 @@
                     <h2 class="text-gray-600 ml-0.5">Users statistics by each attribute</h2>
                 </div>
             </div>
-
-            <section class="grid md:grid-cols-2 xl:grid-cols-4 gap-8">
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Proffesionalism
-                        <canvas id="proffesionalism_chart" height='600' width='600'>Proffesionalism</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Teamwork
-                        <canvas id="teamwork_chart" height='600' width='600'>Teamwork</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Communication
-                        <canvas id="communication_chart" height='600' width='600'>Communication</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Organize
-                        <canvas id="organize_chart" height='600' width='600'>Organize</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Problem Solving
-                        <canvas id="problem_solving_chart" height='600' width='600'>Problem Solving</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Personality
-                        <canvas id="personality_chart" height='600' width='600'>Personality</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Reliability
-                        <canvas id="reliability_chart" height='600' width='600'>Reliability</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Honesty and integrity
-                        <canvas id="honesty_integrity_chart" height='600' width='600'>Honesty and integrity</canvas></div>
-                    <span id='span'></span><div class="px-6 py-5 font-semibold border-b border-gray-100">Emotional Intelligence
-                        <canvas id="emotional_intelligence_chart" height='600' width='600'>Emotional Intelligence</canvas></div>
-                    <span id='span'></span>
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Willingness to learn
-                        <canvas id="willingness_to_learn_chart" height='600' width='600'>Willingness to learn</canvas></div>
-                    <span id='span'></span>
+            <section class="flex flex-wrap gap-4 md:gap-10 bg-white shadow rounded-lg justify-center">
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Proffesionalism
+                    <canvas id="proffesionalism_chart" height='600' width='600'>Proffesionalism</canvas>
+                </div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Teamwork
+                    <canvas id="teamwork_chart" height='600' width='600'>Teamwork</canvas></div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Communication
+                    <canvas id="communication_chart" height='600' width='600'>Communication</canvas></div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Organize
+                    <canvas id="organize_chart" height='600' width='600'>Organize</canvas></div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Problem Solving
+                    <canvas id="problem_solving_chart" height='600' width='600'>Problem Solving</canvas></div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Personality
+                    <canvas id="personality_chart" height='600' width='600'>Personality</canvas></div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Reliability
+                    <canvas id="reliability_chart" height='600' width='600'>Reliability</canvas></div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Honesty and integrity
+                    <canvas id="honesty_integrity_chart" height='600' width='600'>Honesty and integrity</canvas></div>
+                <span id='span'></span><div class="px-6 py-5 font-semibold border-b border-gray-100">Emotional Intelligence
+                    <canvas id="emotional_intelligence_chart" height='600' width='600'>Emotional Intelligence</canvas></div>
+                <span id='span'></span>
+                <div class="px-6 py-5 font-semibold border-b border-gray-100">Willingness to learn
+                    <canvas id="willingness_to_learn_chart" height='600' width='600'>Willingness to learn</canvas></div>
+                <span id='span'></span>
             </section>
 
         </main>
     </div>
 </body>
+
+<script>
+    var today = new Date();
+    var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
+    document.getElementById("time").innerHTML = date;
+</script>
 
 
 {% endblock content %}
