--- a/templates/users/list_of_offices.html
+++ b/templates/users/list_of_offices.html
@@ -14,7 +14,7 @@
                 <h1 class="text-4xl font-semibold mb-2">Dashboard</h1>
                 <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
             </div>
-            <div class="flex flex-wrap items-start justify-end -mb-3">
+            <div class="flex flex-wrap items-start justify-center -mb-3">
                 {% comment %} SEARCH {% endcomment %}
                 <form class="d-flex" method='GET' action="{% url 'users:search' %}">
                     <div class="search shadow flex">
@@ -32,7 +32,7 @@
                 </form>
                 {% if request.user.is_staff %}
                     <a href={% url 'admin:index' %}><button
-                            class="admin inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                            class="adminbox inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
                             <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                 class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -43,7 +43,7 @@
                     </a>
                 {% endif %}
                 <a href={% url 'users:edit_user' pk=user.pk %}><button
-                        class="inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
