--- a/templates/posts/post_details.html
+++ b/templates/posts/post_details.html
@@ -1,17 +1,15 @@
 {% extends 'base.html' %}
-
-{% block title %}List of offices{% endblock title %}
-
-
+{% load static %}
 {% block content %}
 
-
 <body class="flex bg-gray-100 min-h-screen">
-
     <main class="p-6 sm:p-10 space-y-6">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
             <div class="mr-6">
-                <h1 class="text-4xl font-semibold mb-2">All offices</h1>
+                <h1 class="text-4xl font-semibold mb-2"><a href="{{request.META.HTTP_REFERER}}">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                </svg></a></h1>
                 {% comment %} <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2> {% endcomment %}
             </div>
             <div class="flex flex-wrap items-start justify-center -mb-3">
@@ -53,45 +51,23 @@
                     </button></a>
             </div>
         </div>
-        <!--LIST OF OFFICES -->
-        <section class="grid md:grid-cols-2 xl:grid-cols-1 gap-6">
-            <div class="flex items-center p-8">
-                <table class="min-w-full divide-y divide-gray-200">
-                    <thead class="bg-gray-50">
-                        <tr>
-                            <th scope="col"
-                                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                Name
-                            </th>
-                        </tr>
-                    </thead>
-                    {% for office in offices %}
-                    <tbody class="bg-white divide-y divide-gray-200">
-                        <tr>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <div class="flex items-center">
-                                    <div class="flex-shrink-0 h-10 w-10">
-                                        <img class="h-10 w-10 rounded-full"
-                                            src="{{ office.office_image.url }}"
-                                            alt="">
-                                    </div>
-                                    <div class="ml-4">
-                                        <div class="text-sm font-medium text-gray-900">
-                                            <a href="{{ office.get_absolute_url }}">{{ office.office_name }}</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                    {% endfor %}
-                </table>
+        <section>
+            <div class="flex flex-col md:col-span-2 md:row-span-2 bg-white shadow rounded-lg">
+                <div class="px-4 py-5 font-semibold border-b border-gray-100">{{ post.title }}</div>
+                <div class="overflow-y-auto" style="max-height: 30rem;">
+                    <ul class="p-4 space-y-4">
+                        <li class="flex items-left">
+                            <span class="text-gray-600">{{ post.body }}</span>
+                            {% comment %} <span class="ml-auto font-semibold">{{ user.all| floatformat:2 }}</span>
+                            {% endcomment %}
+                        </li>
+                        </br>
+                        <span class="font-semibold border-b border-gray-100">{{ post.date_posted }}</span>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
-    </div>
 </body>
-
-
 
 {% endblock content %}
