--- a/templates/ratings/rate.html
+++ b/templates/ratings/rate.html
@@ -6,12 +6,6 @@
 
 <body class="flex bg-gray-100 min-h-screen">
     <main class="p-6 sm:p-10 space-y-6">
-        <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
-            <div class="mr-6">
-                <h1 class="text-4xl font-semibold mb-2">Dashboard</h1>
-                <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
-            </div>
-        </div>
         <!--Employee information-->
         <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
@@ -155,6 +149,8 @@
                         {% if user.id is not None %}
                         <div class="flex flex-wrap -mx-3 mb-6">
                             <div class="w-full flex justify-center">
+                                <a class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full"
+                                href="{{request.META.HTTP_REFERER}}">Cancel</a>
                                 <button type="submit" value="Submit"
                                     class="shadow-none bg-blue-700 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
                                     Submit
