--- a/templates/users/list_of_users_by_office.html
+++ b/templates/users/list_of_users_by_office.html
@@ -20,8 +20,8 @@
     <main class="p-6 sm:p-10 space-y-6">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
             <div class="mr-6">
-                <h1 class="text-4xl font-semibold mb-2">Dashboard</h1>
-                <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
+                <h1 class="text-4xl font-semibold mb-2">Users by office</h1>
+                <h2 class="text-gray-600 ml-0.5">{{ work_office }}</h2>
             </div>
             <div class="flex flex-wrap items-start justify-end -mb-3">
                 {% comment %} SEARCH {% endcomment %}
