--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -10,7 +10,10 @@
     <main class="p-6 sm:p-10 space-y-6">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
             <div class="flex flex-wrap items-start space-y-6 md:space-y-0 justify-center -mb-3">
-                <h1 class="text-4xl font-semibold mb-2">Dashboard</h1>
+                <h1 class="text-4xl font-semibold mb-2"><a href="{% url 'users:list_of_users' %}">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                </svg></a></h1>
             </div>
             <div class="flex flex-wrap items-start space-y-6 md:space-y-0 justify-center -mb-3">
                 {% comment %} SEARCH {% endcomment %}
