--- a/templates/posts/all_posts.html
+++ b/templates/posts/all_posts.html
@@ -32,32 +32,45 @@
                 </form>
                 {% if request.user.is_staff %}
                 <a href={% url 'admin:index' %}><button
-                        class="adminbox inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                        </svg>
+                        Admin Panel
+                    </button>
+                </a>
+                <a href={% url 'posts:create_post' %}><button
+                        class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                         </svg>
-                        Admin Panel
+                        Create post
                     </button>
                 </a>
                 {% endif %}
                 <a href={% url 'users:edit_user' pk=user.pk %}><button
-                        class="adminbox inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                         </svg>
                         Edit Profile
-                    </button></a>
+                    </button>
+                </a>
             </div>
         </div>
         <!--LIST OF POSTS -->
         <div class="grid md:grid-cols-2 xl:grid-cols-4 gap-2">
-        {% for post in page_obj %}
+            {% for post in page_obj %}
             <div class="flex flex-col md:col-span-2 md:row-span-2 bg-white shadow rounded-lg">
-                <a href={% url 'posts:post_details' pk=post.pk %}><div class="px-4 py-5 font-semibold border-b border-gray-100">{{ post.title }}</div></a>
+                <a href={% url 'posts:post_details' pk=post.pk %}>
+                    <div class="px-4 py-5 font-semibold border-b border-gray-100">{{ post.title }}</div>
+                </a>
                 <div class="overflow-y-auto" style="max-height: 30rem;">
                     <ul class="p-4 space-y-4">
                         <li class="flex items-left">
@@ -70,9 +83,9 @@
                     </ul>
                 </div>
             </div>
-        {% endfor %}
+            {% endfor %}
         </div>
-                <div class="flex flex-col items-center my-12">
+        <div class="flex flex-col items-center my-12">
             <div class="flex text-gray-700">
                 {% if page_obj.has_previous %}
 
