--- a/templates/users/edit_user.html
+++ b/templates/users/edit_user.html
@@ -8,8 +8,7 @@
     <main class="p-6 sm:p-10 space-y-6">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
             <div class="mr-6">
-                <h1 class="text-4xl font-semibold mb-2">Dashboard</h1>
-                <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
+                <h1 class="text-4xl font-semibold mb-2">Edit Profile</h1>
             </div>
         </div>
         <!--Employee information-->
@@ -89,6 +88,8 @@
                         </div>
                         <div class="flex flex-wrap -mx-3 mb-6">
                             <div class="w-full flex justify-center">
+                                <a class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full"
+                                    href="{{request.META.HTTP_REFERER}}">Cancel</a>
                                 <button type="submit" value="Submit"
                                     class="shadow-none bg-blue-700 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
                                     Submit
